2.4 
* Post NRAO-DiFX 1.1 developments
* Ability to write .calc and .input files
* Mass renaming of .c source files

2.3
* Support new keywords : ABERRATION CORR (.im) and DIFX VERSION (.calc)
* Fix mapping of autocorrelation frequency ids
* Revamp antenna indexing
* support for different ordering of telescopes in the input files
* make summary versions of printing functions
* make fprintf versions of all printing functions
* This is the version for NRAO-DiFX 1.1

2.2
* partial write support.  So far: delay, uvw, rate and im files

2.1
* a possible bug fix
* support for sorting antennas into alpha order

2.0
* some changes needed for difx2fits 2.0.
* implement fits source ids
* bug fixes around the board
* finish initial pulsar support

1.6
* Add support for spacecraft.  Much cleanup of code

1.5
* Add top level parameters to DifxInput that are used specifically for FITS

1.4
* DifxInputGetAntennaId()

1.3
* Load in flag file
* use calloc where appropriate
* support generalized DATA FORMAT

1.2
* Fixed array indexing issue

1.1
* Improved auto*, changed library name a little

1.0 
* Initial version