@@ -2,6 +2,7 @@
 * Post NRAO-DiFX 1.1 developments
 * Ability to write .calc and .input files
 * Mass renaming of .c source files
+* Determine nPolar smartly -- don't assume based on config name
 
 2.3
 * Support new keywords : ABERRATION CORR (.im) and DIFX VERSION (.calc)
